--- a/1.0/demo/index.html
+++ b/1.0/demo/index.html
@@ -5,10 +5,20 @@
     <title>Timeselect的demo</title>
     <script src="http://g.tbcdn.cn/kissy/k/1.4.1/seed-min.js" charset="utf-8"></script>
     <link rel="stylesheet" href="http://g.tbcdn.cn/kissy/k/1.3.0/css/dpl/base-min.css">
+    <link rel="stylesheet" type="text/css" href="../index.css">
 </head>
 <body>
 <h2>Timeselect的demo</h2>
-
+<div class="timepanel">
+<div class="timeline">
+<ul>
+    <li class="timeline-item">08:00</li>
+    <li class="timeline-item">09:00</li>
+    <li class="timeline-item">10:00</li>
+</ul>
+</div>
+<div class="timecontent"></div>
+</div>
 <script>
     var S = KISSY;
     if (S.Config.debug) {
