--- a/1.0/demo/index.html
+++ b/1.0/demo/index.html
@@ -3,22 +3,29 @@
 <head>
     <meta charset="utf-8"/>
     <title>Timeselect的demo</title>
-    <script src="http://g.tbcdn.cn/kissy/k/1.4.1/seed-min.js" charset="utf-8"></script>
+    <script src="http://g.tbcdn.cn/kissy/k/1.4.1/seed.js" charset="utf-8"></script>
     <link rel="stylesheet" href="http://g.tbcdn.cn/kissy/k/1.3.0/css/dpl/base-min.css">
     <link rel="stylesheet" type="text/css" href="../index.css">
+<style type="text/css">
+#demo {
+    width: 300px;
+    height: 400px;
+    display: inline-block;
+    overflow: hidden;
+}
+.newTime {
+    display: inline-block;
+}
+</style>
 </head>
 <body>
 <h2>Timeselect的demo</h2>
-<div class="timepanel">
-<div class="timeline">
-<ul>
-    <li class="timeline-item">08:00</li>
-    <li class="timeline-item">09:00</li>
-    <li class="timeline-item">10:00</li>
-</ul>
+<button onclick="addTimeSelect();">新增</button>
+<div class="newTime" id="newTime">
 </div>
-<div class="timecontent"></div>
-</div>
+<div class="newTime" id="newTime2"></div>
+<div class="newTime" id="newTime3"></div>
+
 <script>
     var S = KISSY;
     if (S.Config.debug) {
@@ -37,7 +44,25 @@
 
     S.use('gallery/timeselect/1.0/index', function (S, Timeselect) {
           new Timeselect();
-    })
+    });
+
+function addTimeSelect(conf) {
+    S.use('gallery/timeselect/1.0/index', function (S, Timeselect) {
+          var timeSelect = new Timeselect(conf);
+          timeSelect.on('end', function () {
+            return;
+             if(window.confirm('保存时间？')) {
+                timeSelect.saveTime();
+             } else {
+                timeSelect.clearTime();
+             }
+          });
+    });
+}
+addTimeSelect({id:'newTime', width:200, bgColor:'#fff'});
+addTimeSelect({id:'newTime2', width:200});
+addTimeSelect({id:'newTime3', width:300, bgColor:'#ddd'});
+
 </script>
 </body>
 </html>
