--- a/1.0/demo/index.html
+++ b/1.0/demo/index.html
@@ -5,7 +5,6 @@
     <title>Timeselect的demo</title>
     <script src="http://g.tbcdn.cn/kissy/k/1.4.1/seed.js" charset="utf-8"></script>
     <link rel="stylesheet" href="http://g.tbcdn.cn/kissy/k/1.3.0/css/dpl/base-min.css">
-    <link rel="stylesheet" type="text/css" href="../index.css">
 <style type="text/css">
 #demo {
     width: 300px;
@@ -46,22 +45,32 @@
           new Timeselect();
     });
 
-function addTimeSelect(conf) {
     S.use('gallery/timeselect/1.0/index', function (S, Timeselect) {
-          var timeSelect = new Timeselect(conf);
-          timeSelect.on('end', function () {
-            return;
-             if(window.confirm('保存时间？')) {
-                timeSelect.saveTime();
-             } else {
-                timeSelect.clearTime();
-             }
-          });
+          //初始化
+        var timeSelect1 = new Timeselect(
+            {
+                id:'newTime', 
+                width:200, 
+                bgColor:'#fff'
+            });
+            //隐藏时间轴
+        var timeSelect2 = new Timeselect(
+            {
+                id:'newTime2', 
+                hideTimeLine:false, 
+                width:200, 
+                startTime:7
+            })
+            timeSelect2.init([{minTime:'8:00', maxTime:'10:00',percent:50, data:{name:12}}]);
+            //
+        var timeSelect3 = new Timeselect(
+            {
+                id:'newTime3', 
+                width:300, 
+                bgColor:'#ddd'
+            });
+
     });
-}
-addTimeSelect({id:'newTime', width:200, bgColor:'#fff'});
-addTimeSelect({id:'newTime2', width:200, startTime:7});
-addTimeSelect({id:'newTime3', width:300, bgColor:'#ddd'});
 </script>
 </body>
 </html>
