添加页面时间段禁用

--- a/1.0/demo/index.html
+++ b/1.0/demo/index.html
@@ -61,7 +61,13 @@
                 width:200, 
                 startTime:7
             })
-            timeSelect2.init([{minTime:'8:00', maxTime:'10:00',percent:50, data:{name:12}}]);
+            timeSelect2.init([{
+                minTime:'8:00', 
+                maxTime:'10:00',
+                percent:50, 
+                data:{name:12},
+                disable:true
+            }]);
             //
         var timeSelect3 = new Timeselect(
             {
